--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,8 @@
   "theme_color": "#3498db",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2103/2103633.png",
-      "sizes": "512x512",
+      "src": "/icon.png",
+      "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any maskable"
     }
