--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clim-airton",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "@tuya/tuya-connector-nodejs": "latest",
     "@vercel/kv": "latest"
